Fix home slider gap issue

--- a/src/components/HomeSlider/home_slider.scss
+++ b/src/components/HomeSlider/home_slider.scss
@@ -7,6 +7,7 @@ section.home-slider {
   &[data-animated="true"] {
     overflow: hidden;
     .home-slider__inner {
+      grid-auto-columns: calc(50% - var(--_gap) / 1.3);
       animation: scroll 15s linear infinite;
     }
 
@@ -20,7 +21,7 @@ section.home-slider {
   .home-slider__inner {
     display: grid;
     grid-auto-flow: column;
-    grid-auto-columns: calc(50% - var(--_gap) / 1.3);
+    grid-auto-columns: 50%;
     gap: var(--_gap);
 
     list-style: none;
@@ -31,6 +32,7 @@ section.home-slider {
     img {
       width: 100%;
       height: 100%;
+      object-fit: cover;
     }
 
     &__name {
@@ -40,11 +42,11 @@ section.home-slider {
       width: 100%;
       bottom: 0;
       left: 0;
-      height: 25px;
+      height: 23%;
       backdrop-filter: blur(3px);
 
       span {
-        font-size: var(--fs-300);
+        font-size: var(--fs-200);
         padding-left: 0.6875rem;
         color: #fff;
       }
